--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "icons-material": "^0.0.1-security",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-multi-carousel": "^2.8.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
