--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "axios": "^1.12.2",
     "icons-material": "^0.0.1-security",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
