--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "icons-material": "^0.0.1-security",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-multi-carousel": "^2.8.6"
+    "react-multi-carousel": "^2.8.6",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
