--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "icons-material": "^0.0.1-security",
     "react": "^19.1.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
