--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
